--- a/sass1.html
+++ b/sass1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./icon.css">
   </head>
   <body>
     <header class="header">
@@ -45,6 +46,54 @@
                 <img src="./img/nat-3.jpg" alt="" class="composition__photo composition__photo--p3">
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        
+
+
+        <div class="row">
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="icon-basic-world feature-box__icon"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">explore the world</h3>
+                    <p class="feature-box__text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius amet natus sequi 
+                    </p>
+
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="icon-basic-compass feature-box__icon"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">meet nature</h3>
+                    <p class="feature-box__text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius amet natus sequi 
+                    </p>
+
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="icon-basic-map feature-box__icon"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">find your way</h3>
+                    <p class="feature-box__text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius amet natus sequi 
+                    </p>
+
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="icon-basic-heart feature-box__icon"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">live a healthier life</h3>
+                    <p class="feature-box__text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius amet natus sequi 
+                    </p>
+
+                </div>
+            </div>
         </div>
       </section>
     </main>
