--- a/sass1.html
+++ b/sass1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./icon.css">
+    <link rel="stylesheet" href="./icon.css" />
   </head>
   <body>
     <header class="header">
@@ -30,68 +30,234 @@
         </div>
         <div class="row">
           <div class="col-1-of-2">
-            <h3 class="heading- u-margin-bottom-small "> youre going to fall in love with nature</h3>
-            <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius amet natus sequi molestias ad laborum odit facilis dignissimos consequuntur cum, alias harum. Perferendis quia veniam, fugit consectetur beatae asperiores suscipit?</p>
+            <h3 class="heading- u-margin-bottom-small">
+              youre going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
+              amet natus sequi molestias ad laborum odit facilis dignissimos
+              consequuntur cum, alias harum. Perferendis quia veniam, fugit
+              consectetur beatae asperiores suscipit?
+            </p>
 
-            <h3 class="heading- u-margin-bottom-small"> live advantures like you never have before</h3>
-            <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius amet natus sequi molestias ad laborum odit facilis dignissimos consequuntur cum, alias harum. Perferendis quia veniam, fugit consectetur beatae asperiores suscipit?</p>
-            
+            <h3 class="heading- u-margin-bottom-small">
+              live advantures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
+              amet natus sequi molestias ad laborum odit facilis dignissimos
+              consequuntur cum, alias harum. Perferendis quia veniam, fugit
+              consectetur beatae asperiores suscipit?
+            </p>
 
             <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-                <img src="./img/nat-1.jpg" alt="" class="composition__photo composition__photo--p1">
-                <img src="./img/nat-2.jpg" alt="" class="composition__photo composition__photo--p2">
-                <img src="./img/nat-3.jpg" alt="" class="composition__photo composition__photo--p3">
+              <img
+                src="./img/nat-1.jpg"
+                alt=""
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="./img/nat-2.jpg"
+                alt=""
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="./img/nat-3.jpg"
+                alt=""
+                class="composition__photo composition__photo--p3"
+              />
             </div>
           </div>
         </div>
       </section>
 
       <section class="section-features">
-        
-
-
         <div class="row">
-            <div class="col-1-of-4">
-                <div class="feature-box">
-                    <i class="icon-basic-world feature-box__icon"></i>
-                    <h3 class="heading-tertiary u-margin-bottom-small">explore the world</h3>
-                    <p class="feature-box__text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius amet natus sequi 
-                    </p>
-
-                </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-world feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
+                amet natus sequi
+              </p>
             </div>
-            <div class="col-1-of-4">
-                <div class="feature-box">
-                    <i class="icon-basic-compass feature-box__icon"></i>
-                    <h3 class="heading-tertiary u-margin-bottom-small">meet nature</h3>
-                    <p class="feature-box__text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius amet natus sequi 
-                    </p>
-
-                </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-compass feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                meet nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
+                amet natus sequi
+              </p>
             </div>
-            <div class="col-1-of-4">
-                <div class="feature-box">
-                    <i class="icon-basic-map feature-box__icon"></i>
-                    <h3 class="heading-tertiary u-margin-bottom-small">find your way</h3>
-                    <p class="feature-box__text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius amet natus sequi 
-                    </p>
-
-                </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-map feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
+                amet natus sequi
+              </p>
             </div>
-            <div class="col-1-of-4">
-                <div class="feature-box">
-                    <i class="icon-basic-heart feature-box__icon"></i>
-                    <h3 class="heading-tertiary u-margin-bottom-small">live a healthier life</h3>
-                    <p class="feature-box__text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius amet natus sequi 
-                    </p>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-heart feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                live a healthier life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
+                amet natus sequi
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            <main>Most popular tours</main>
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--1">
+                  <!-- <img src="./img/nat-5.jpg" alt=""> -->
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1"
+                    >The sea explorer</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>3day tours</li>
+                    <li>up to 30 people</li>
+                    <li>2tour guides</li>
+                    <li>sleep in cozy hotels</li>
+                    <li>difficalty: easy</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">only</p>
+                    <p class="card__price-value">$897</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--2">
+                  <!-- <img src="./img/nat-5.jpg" alt=""> -->
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2"
+                    >The forest hiker</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>7day tours</li>
+                    <li>up to 40 people</li>
+                    <li>6tour guides</li>
+                    <li>sleep in provided tents</li>
+                    <li>difficalty: medium</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">only</p>
+                    <p class="card__price-value">$897</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+                <div class="card__side card__side--front">
+                  <div class="card__picture card__picture--3">
+                    <!-- <img src="./img/nat-5.jpg" alt=""> -->
+                  </div>
+                  <h4 class="card__heading">
+                    <span class="card__heading-span card__heading-span--3"
+                      >The sea explorer</span
+                    >
+                  </h4>
+                  <div class="card__details">
+                    <ul>
+                      <li>3day tours</li>
+                      <li>up to 30 people</li>
+                      <li>2tour guides</li>
+                      <li>sleep in cozy hotels</li>
+                      <li>difficalty: easy</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card__side card__side--back card__side--back-3">
+                  <div class="card__cta">
+                    <div class="card__price-box">
+                      <p class="card__price-only">only</p>
+                      <p class="card__price-value">$897</p>
+                    </div>
+                    <a href="#" class="btn btn--white">Book now!</a>
+                  </div>
+                </div>
+              </div>
+
+          </div>
+
+
+
+
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="" class="btn btn--green">Discover all tours</a>
+        </div>
+      </section>
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            <main>We make people genuinely happy</main>
+          </h2>
+        </div>
+        <div class="row">
+            <div class="story">
+                <figure class="story__shape">
+                    <img class="story__img" src="./img/nat-8.jpg" alt="">
+                </figure>
+                <div class="story__text">
+                    <h3 class="heading__tertiary u-margin-bottom-small">
+                        i had the best week ever with my family
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ex, dicta perspiciatis perferendis excepturi est aspernatur deleniti suscipit modi, nostrum distinctio dolore temporibus dolor rerum enim, odit ratione corrupti? Consequuntur.</p>
                 </div>
             </div>
         </div>
