--- a/sass1.html
+++ b/sass1.html
@@ -165,8 +165,6 @@
                 </div>
               </div>
             </div>
-
-
           </div>
           <div class="col-1-of-3">
             <div class="card">
@@ -202,64 +200,96 @@
           </div>
           <div class="col-1-of-3">
             <div class="card">
-                <div class="card__side card__side--front">
-                  <div class="card__picture card__picture--3">
-                    <!-- <img src="./img/nat-5.jpg" alt=""> -->
-                  </div>
-                  <h4 class="card__heading">
-                    <span class="card__heading-span card__heading-span--3"
-                      >The sea explorer</span
-                    >
-                  </h4>
-                  <div class="card__details">
-                    <ul>
-                      <li>3day tours</li>
-                      <li>up to 30 people</li>
-                      <li>2tour guides</li>
-                      <li>sleep in cozy hotels</li>
-                      <li>difficalty: easy</li>
-                    </ul>
-                  </div>
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--3">
+                  <!-- <img src="./img/nat-5.jpg" alt=""> -->
                 </div>
-                <div class="card__side card__side--back card__side--back-3">
-                  <div class="card__cta">
-                    <div class="card__price-box">
-                      <p class="card__price-only">only</p>
-                      <p class="card__price-value">$897</p>
-                    </div>
-                    <a href="#" class="btn btn--white">Book now!</a>
-                  </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3"
+                    >The sea explorer</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>3day tours</li>
+                    <li>up to 30 people</li>
+                    <li>2tour guides</li>
+                    <li>sleep in cozy hotels</li>
+                    <li>difficalty: easy</li>
+                  </ul>
                 </div>
               </div>
-
+              <div class="card__side card__side--back card__side--back-3">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">only</p>
+                    <p class="card__price-value">$897</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
+              </div>
+            </div>
           </div>
-
-
-
-
         </div>
         <div class="u-center-text u-margin-top-huge">
           <a href="" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
       <section class="section-stories">
+        <div class="bg-video">
+            <video  class="bg-video__content " autoplay muted loop>
+                <source src="./img/video.mp4 " type="video/mp4">
+                <source src="./img/video.webm" type="video/webm">
+                your browser is not supported!
+            </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             <main>We make people genuinely happy</main>
           </h2>
         </div>
         <div class="row">
-            <div class="story">
-                <figure class="story__shape">
-                    <img class="story__img" src="./img/nat-8.jpg" alt="">
-                </figure>
-                <div class="story__text">
-                    <h3 class="heading__tertiary u-margin-bottom-small">
-                        i had the best week ever with my family
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ex, dicta perspiciatis perferendis excepturi est aspernatur deleniti suscipit modi, nostrum distinctio dolore temporibus dolor rerum enim, odit ratione corrupti? Consequuntur.</p>
-                </div>
+          <div class="story">
+            <figure class="story__shape">
+              <img class="story__img" src="./img/nat-8.jpg" alt="" />
+              <figcation class="story__caption">marry smith</figcation>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading__tertiary u-margin-bottom-small">
+                i had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatem ex, dicta perspiciatis perferendis excepturi est
+                aspernatur deleniti suscipit modi, nostrum distinctio dolore
+                temporibus dolor rerum enim, odit ratione corrupti?
+                Consequuntur.
+              </p>
             </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img class="story__img" src="./img/nat-9.jpg" alt="" />
+              <figcation class="story__caption">mjack wilson</figcation>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading__tertiary u-margin-bottom-small">
+                wow! my life is completly different after that
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatem ex, dicta perspiciatis perferendis excepturi est
+                aspernatur deleniti suscipit modi, nostrum distinctio dolore
+                temporibus dolor rerum enim, odit ratione corrupti?
+                Consequuntur.
+              </p>
+            </div> 
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="" class=" btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
