add background image

--- a/sass1.html
+++ b/sass1.html
@@ -272,11 +272,11 @@
           <div class="story">
             <figure class="story__shape">
               <img class="story__img" src="./img/nat-9.jpg" alt="" />
-              <figcation class="story__caption">mjack wilson</figcation>
+              <figcation class="story__caption">mick wilson</figcation>
             </figure>
             <div class="story__text">
               <h3 class="heading__tertiary u-margin-bottom-small">
-                wow! my life is completly different after that
+                wow! my life is completly different after this tour
               </h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -290,6 +290,11 @@
         </div>
         <div class="u-center-text u-margin-top-huge">
           <a href="" class=" btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
+      <section class="section-book">
+        <div class="row">
+            <div class="book"></div>
         </div>
       </section>
     </main>
