--- a/sass1.html
+++ b/sass1.html
@@ -237,11 +237,11 @@
       </section>
       <section class="section-stories">
         <div class="bg-video">
-            <video  class="bg-video__content " autoplay muted loop>
-                <source src="./img/video.mp4 " type="video/mp4">
-                <source src="./img/video.webm" type="video/webm">
-                your browser is not supported!
-            </video>
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="./img/video.mp4 " type="video/mp4" />
+            <source src="./img/video.webm" type="video/webm" />
+            your browser is not supported!
+          </video>
         </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
@@ -285,16 +285,62 @@
                 temporibus dolor rerum enim, odit ratione corrupti?
                 Consequuntur.
               </p>
-            </div> 
+            </div>
           </div>
         </div>
         <div class="u-center-text u-margin-top-huge">
-          <a href="" class=" btn-text">Read all stories &rarr;</a>
+          <a href="" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
       <section class="section-book">
         <div class="row">
-            <div class="book"></div>
+          <div class="book">
+            <div class="book__form">
+              <form action="#" class="form">
+                <div class="u-margin-bottom-medium">
+                  <h2 class="heading-secondary">
+                    <main>Start booking now!</main>
+                  </h2>
+                </div>
+                <div class="form__group">
+                  <input
+                    id="name"
+                    type="text"
+                    class="form__input"
+                    placeholder="fullName"
+                    required
+                  />
+                  <label for="name" class="form__label">Full name</label>
+                </div>
+                <div class="form__group">
+                  <input
+                    id="email"
+                    type="email"
+                    class="form__input"
+                    placeholder="email address"
+                    required
+                  />
+                  <label for="email" class="form__label">Email address</label>
+                </div>
+                <div class="form__group u-margin-bottom-medium">
+                    <div class="form__radio-group">
+                        <input id="small" type="radio" class="form__radio-input" name="size">
+                        <label for="small" class="form__radio-label">
+                            <span class="form__radio-button"></span>
+                            small tour group
+                        </label>
+                    </div>
+                    <div class="form__radio-group">
+                        <input id="large" type="radio" class="form__radio-input" name="size">
+                        <label for="large" class="form__radio-label"><span class="form__radio-button"></span>large tour group</label>
+                    </div>
+                </div>
+                <div class="form__group">
+                    <button class="btn btn--green">NEXT STEP &rarr;</button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </section>
     </main>
