--- a/sass1.html
+++ b/sass1.html
@@ -323,20 +323,33 @@
                   <label for="email" class="form__label">Email address</label>
                 </div>
                 <div class="form__group u-margin-bottom-medium">
-                    <div class="form__radio-group">
-                        <input id="small" type="radio" class="form__radio-input" name="size">
-                        <label for="small" class="form__radio-label">
-                            <span class="form__radio-button"></span>
-                            small tour group
-                        </label>
-                    </div>
-                    <div class="form__radio-group">
-                        <input id="large" type="radio" class="form__radio-input" name="size">
-                        <label for="large" class="form__radio-label"><span class="form__radio-button"></span>large tour group</label>
-                    </div>
+                  <div class="form__radio-group">
+                    <input
+                      id="small"
+                      type="radio"
+                      class="form__radio-input"
+                      name="size"
+                    />
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      small tour group
+                    </label>
+                  </div>
+                  <div class="form__radio-group">
+                    <input
+                      id="large"
+                      type="radio"
+                      class="form__radio-input"
+                      name="size"
+                    />
+                    <label for="large" class="form__radio-label"
+                      ><span class="form__radio-button"></span>large tour
+                      group</label
+                    >
+                  </div>
                 </div>
                 <div class="form__group">
-                    <button class="btn btn--green">NEXT STEP &rarr;</button>
+                  <button class="btn btn--green">NEXT STEP &rarr;</button>
                 </div>
               </form>
             </div>
@@ -344,5 +357,39 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img class="footer__logo" src="./img/logo-green-2x.png" alt="" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">compnay</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">contact us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">carees</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">privacy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+            <p class="footer__copyright">
+                bult my <a href="#" class="footer__link">jonas</a> for his project<a href="#" class="footer__link">zahra</a> copyright &copy; by jonas you can use it your self.
+            </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
